@@ -3,6 +3,8 @@ package com.tg5.unit.service;
 import com.tg5.domain.Event;
 import com.tg5.domain.Member;
 import com.tg5.domain.Session;
+import com.tg5.repository.MemberRepository;
+import com.tg5.repository.SessionRepository;
 import com.tg5.service.reports.AttendanceByAccountTypeAndWithinIntervalReport;
 import com.tg5.repository.EventRepository;
 import com.tg5.repository.RecordRepository;
@@ -12,9 +14,11 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
@@ -27,7 +31,10 @@ public class AttendanceServiceImplTest {
     private AttendanceServiceImpl attendanceService;
 
     @MockBean
-    private EventRepository eventRepository;
+    private MemberRepository memberRepository;
+
+    @MockBean
+    private SessionRepository sessionRepository;
 
     @MockBean
     private RecordRepository recordRepository;
@@ -35,25 +42,35 @@ public class AttendanceServiceImplTest {
     @Test
     public void testGetAttendanceByAccountTypeByDateFromTo() {
         // Create mock data
-        Event mockEvent = new Event();
-        mockEvent.setSessions(Arrays.asList(new Session(), new Session()));
         Member mockMember = new Member();
         mockMember.setFirstname("Test");
         mockMember.setLastname("Member");
-        mockEvent.setMembers(Collections.singletonList(mockMember));
 
         // Set up mock behavior
-        when(eventRepository.getByAccountTypeAndDateFromTo(any(String.class), any(LocalDateTime.class), any(LocalDateTime.class)))
-                .thenReturn(Collections.singletonList(mockEvent));
-        when(recordRepository.countByEventAndMember(any(), any()))
-                .thenReturn(1);
+        when(memberRepository.getByEventAccountTypeAndScanDateTimeBetween(
+                any(String.class),
+                any(LocalDateTime.class),
+                any(LocalDateTime.class))
+            ).thenReturn(List.of(mockMember));
+        when(sessionRepository.countByMemberAndAccountTypeAndStartEndTimeBetween(
+                any(Member.class),
+                any(String.class),
+                any(LocalDateTime.class),
+                any(LocalDateTime.class))
+        ).thenReturn(2);
+        when(recordRepository.countByMemberAndAccountTypeAndScanDateTimeBetween(
+                any(Member.class),
+                any(String.class),
+                any(LocalDateTime.class),
+                any(LocalDateTime.class))
+        ).thenReturn(1);
 
         // Call the method
         AttendanceByAccountTypeAndWithinIntervalReport response =
                 attendanceService.getAttendanceByAccountTypeByDateFromTo(
                         "student",
-                        "2022-01-01",
-                        "2022-12-31"
+                        LocalDate.parse("2022-01-01"),
+                        LocalDate.parse("2022-12-31")
                 );
 
         // Assert the returned data
